--- a/index.html
+++ b/index.html
@@ -6,20 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Cat Facts</title>
-
+    <link rel="stylesheet" href="styles/p1.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
+        <div class="center_tag"> <b>Cat Facts!</b>
+            <button id="button" onclick="location.reload()">New Fact!</button>
+            <div class="palette-picker"><b>Select a Palette</b>
+                <label>
+                  <input type="radio" name="palette" value="p1" checked>
+                  <span style="color:#8294c4">◯</span>
+                </label>
+                <label>
+                  <input type="radio" name="palette" value="p2">
+                  <span style="color:#b2a4ff">◯</span>
+                </label>
+                <label>
+                  <input type="radio" name="palette" value="p3">
+                  <span style="color:#933ce4">◯</span>
+                </label>
+                <label>
+                  <input type="radio" name="palette" value="p4">
+                  <span style="color:#97aa58">◯</span>
+                </label>
+                <label>
+                  <input type="radio" name="palette" value="p5">
+                  <span style="color:#ff9494">◯</span>
+                </label>
+              </div>
+        </div>
         <div class="center_container">
             <div class="center">
+                <img id="randomImage" src="">
+                <audio id="myAudio">
+                    <source src="path/to/sound.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                  </audio>
                 <div class="center_top">
-
-                </div>
-                <div class="center_bottom">
-                    
+                    <div class="fact"></div>
                 </div>
             </div>
         </div>
+        <div class="signature">
+           <a href="http://github.com/metehandoenmez"><svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
+            <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
+        </svg><span>/ metehandoenmez</span></a>
+        </div>
     </div>
+
 </body>
 </html>
