--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
                 </label>
               </div>
         </div>
-        <div class="center_container">
+        <div class="center_container" id="audioDiv">
             <div class="center">
                 <img id="randomImage" src="">
-                <audio id="myAudio">
-                    <source src="path/to/sound.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                  </audio>
+                <audio src="images/meow.mp3" id="audio"></audio>
                 <div class="center_top">
                     <div class="fact"></div>
                 </div>
