--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </div>
     </div>
     <button id="screenshot-btn">Save<img src="images/takescreenshot.svg" width="40px" height="40px"></button>
+    <div class="push_footer">
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
     <script src="script/script.js"></script>
 </body>
