--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main">
         <div class="center_tag"> <b>Cat Facts!</b>
             <button id="button" onclick="location.reload()">New Fact!</button>
-            <div class="palette-picker"><b>Select a Palette</b>
+            <div class="palette-picker">
                 <label>
                   <input type="radio" name="palette" value="p1" checked>
                   <span style="color:#8294c4">◐</span>
